# ao-zk-bridge

./: .gitignore  .gitmodules  README.md  e2e-test.sh  receipt.json  response.json  start.sh
.github/: workflow.yml
.github/workflows/: github-actions-demo.yml
ao/contracts/: .gitignore  package.json
ao/contracts/ao-bridge/: processes.yaml  tlconfig.lua
ao/contracts/ao-bridge/scripts/: build.sh
ao/contracts/ao-bridge/src/: database.lua  dbUtils.lua  globals.lua  main.lua  main.tl
ao/contracts/sepolia-oracle/: processes.yaml  tlconfig.lua
ao/contracts/sepolia-oracle/src/: database.tl  globals.tl  main.tl
ao/contracts/sepolia-oracle/src/typedefs/: block_types.d.tl
ao/contracts/token/: token.lua
ao/contracts/token/src/: globals.lua  main.lua
ao/contracts/verifier/src/: globals.lua  main.lua
apps/: Cargo.toml
contracts/src/: Counter.sol  ETHReceiver.sol
frontend/: .gitignore  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ascii-art.tsx
frontend/src/styles/: globals.css
methods/: Cargo.toml
methods/guest/: Cargo.toml
oracle/: .env.example  .gitignore  README.md  bun.lockb  index.ts  package.json  start-server.sh
steel-app/: .env.template  .gitignore  .gitmodules  README.md  deploy-contract.sh  e2e-test.sh  start-server.sh
steel-app/apps/: Cargo.toml
steel-app/broadcast/DeployReceiver.s.sol/245022926/: run-latest.json
steel-app/contracts/script/: DeployReceiver.s.sol
